--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">About Me</a></li>
 							<li><a href="#two">Projects</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#three">Writings</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -40,8 +40,12 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Ann Zhang</h1>
-							<p>Urban Planner / Data Analyst / Art Historian / Music & Photography Lover <br> <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<p>Urban Planner / Data Analyst / Art Historian / Music & Photography Lover <br>
+							Check out my LinkedIn, Github, and Resume below:</p>
+							<ul class="icons">
+							<li><a href="https://github.com/annannzhang"> <span class="icon brands fa-github" ></span></a></li>
+							<li><a href="https://www.linkedin.com/in/ann-zi-an-zhang-656b4419b/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -51,22 +55,24 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/profile.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>About</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Masters in City Planning & Urban Spatial Analytics | <br> University of Pennsylvania  <br> <br>
+										B.A. in Art History & Psychology & Science in Society Program | <br> Wesleyan University (CT)
+									   </p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="about.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/guitar.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Photography</h2>
+									<h2>Photography & Music</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -74,39 +80,28 @@
 								</div>
 							</div>
 						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
+						
 					</section>
 
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Projets</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Geospatial Data Analysis and Urban Planning Projects, mostly completed individually in class. Teammates noted in description if collaborated.</p>
 							<div class="features">
+								<section>
+									<a href="Projects/San Diego TOD.html"> <span class="icon solid major fa-train"></span></a>
+									<a href="Projects/San Diego TOD.html"><h3>San Diego TOD Analysis</h3></a>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Lorem ipsum amet</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-lock"></span>
-									<a href="San Diego TOD.html"><h3>San Diego TOD Analysis</h3></a>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
+									<a href= "https://annannzhang.github.io/best-bars-story-map/"><h3>World's Best Bars (Story Map)</h3></a>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
@@ -132,6 +127,49 @@
 					</section>
 
 				<!-- Three -->
+				<section id="three" class="wrapper style4 fade-up">
+					<div class="inner">
+						<h2>Writings</h2>
+						<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+						<div class="features">
+							<section>
+								<span class="icon solid major fa-code"></span>
+								<h3>Honors Thesis: Historic Preservation at Wukang Mansion</h3>
+								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+							</section>
+							<section>
+								<span class="icon solid major fa-lock"></span>
+								<a href="Projects/San Diego TOD.html"><h3>San Diego TOD Analysis</h3></a>
+								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+							</section>
+							<section>
+								<span class="icon solid major fa-cog"></span>
+								<h3>Sed erat ullam corper</h3>
+								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+							</section>
+							<section>
+								<span class="icon solid major fa-desktop"></span>
+								<h3>Veroeros quis lorem</h3>
+								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+							</section>
+							<section>
+								<span class="icon solid major fa-link"></span>
+								<h3>Urna quis bibendum</h3>
+								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+							</section>
+							<section>
+								<span class="icon major fa-gem"></span>
+								<h3>Aliquam urna dapibus</h3>
+								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+							</section>
+						</div>
+						<ul class="actions">
+							<li><a href="generic.html" class="button">Learn more</a></li>
+						</ul>
+					</div>
+				</section>
+
+				<!-- Four -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
