--- a/elements.html
+++ b/elements.html
@@ -25,8 +25,9 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html"  class="active">Elements</a></li>
+						<li><a href="generic.html" class="active">About</a></li>
+						<li><a href="elements.html">Projects</a></li>
+						<li><a href="elements.html">Writings</a></li>
 					</ul>
 				</nav>
 			</header>
