--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 							</section>
 							<section>
-								<span class="icon solid major fa-lock"></span>
-								<a href="Projects/San Diego TOD.html"><h3>San Diego TOD Analysis</h3></a>
+								<span class="icon solid major fa-book"></span>
+								<a href="Projects/San Diego TOD.html"><h3>Architectural History</h3></a>
 								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 							</section>
 							<section>
