minor update on TOD project link

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 							</section>
 							<section>
 								<span class="icon solid major fa-book"></span>
-								<a href="https://github.com/annannzhang/San-Diego-TOD-Analysis/blob/884938678f17fb0df767ce620d8e6d99c1336a49/Zhang_Ann-Zi-an-HW2.html"><h3>Architectural History</h3></a>
+								<a href="Projects/San Diego TOD.html"><h3>Architectural History</h3></a>
 								<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 							</section>
 							<section>
