reformatted projects page

--- a/art.html
+++ b/art.html
@@ -28,7 +28,7 @@
 							
 							<nav id="nav">
 								<ul>
-									<li><a href="index.html">PROJECTS</a></li>
+									<li><a href="index.html">HOME</a></li>
 									<li><a href="about.html">ABOUT</a></li>
 									<li><a href="art.html">ART</a></li>
 								</ul>
@@ -47,8 +47,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>San Diego TOD</h2>
-										<h3>R Studio</h3>
+										<h2>Magna</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
