--- a/art.html
+++ b/art.html
@@ -28,7 +28,7 @@
 							
 							<nav id="nav">
 								<ul>
-									<li><a href="index.html">HOME</a></li>
+									<li><a href="index.html">PROJECTS</a></li>
 									<li><a href="about.html">ABOUT</a></li>
 									<li><a href="art.html">ART</a></li>
 								</ul>
