--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="Project HTML/SD TOD.html">
+									<a href="https://annannzhang.github.io/San-Diego-TOD-Analysis/index.html">
 										<h2>San Diego TOD</h2>
 										<h3>R Studio</h3>
 										<div class="content">
@@ -58,8 +58,9 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Lorem</h2>
+									<a href="https://annannzhang.github.io/best-bars-story-map/">
+										<h2>Best Bars Story Map</h2>
+										<h3>HTML / JavaScript</h3>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
