Updated Project Menu

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 									</span>
 									<a href="https://annannzhang.github.io/best-bars-story-map/">
 										<h2>Best Bars Story Map</h2>
-										<h3>HTML / JavaScript</h3>
+										<h3>HTML / JS</h3>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Unfold World's Top Bars' Stories</p>
 										</div>
 									</a>
 								</article>
@@ -105,7 +105,8 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Veroeros</h2>
+										<h2>30 Day Map Challenge</h2>
+										<h3>Nov 2023</h3>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -116,7 +117,8 @@
 										<img src="images/pic07.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Ipsum</h2>
+										<h2>Class Projects</h2>
+										<h3>Python</h3>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -127,9 +129,10 @@
 										<img src="images/pic08.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Dolor</h2>
+										<h2>Research Papers</h2>
+										<h3>From BA Years</h3>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Range of Topics</p>
 										</div>
 									</a>
 								</article>
@@ -138,7 +141,8 @@
 										<img src="images/pic09.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Nullam</h2>
+										<h2>Price Prediction</h2>
+										<h3>ML/Regression</h3>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -172,7 +176,7 @@
 									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
 									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="annzhang@upenn.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 						</div>
