--- a/undergrad_papers.html
+++ b/undergrad_papers.html
@@ -33,7 +33,7 @@
 									<li><a href="art.html">ART</a></li>
 								</ul>
 							</nav>
-							<h1 style="width: 50%">ANN ZHANG</h1>
+							<h1 style="width: 50%"><a href="index.html">ANN ZHANG </a></h1>
 						</div>	
 
 					</header>
@@ -42,123 +42,121 @@
 					<div id="main">
 						<div class="inner">
 							<section class="tiles">
-								<article class="style2">
+								<article class="style7">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="python_projects.html">
-										<h2>Python Projects</h2>
-										<h3>Python</h3>
+									<a href="https://annannzhang.github.io/San-Diego-TOD-Analysis/index.html">
+										<h2>ARHA Paper 1</h2>
+										<h3>Art History</h3>
 										<div class="content">
-											<p>Class Assignments on a range of themes on urban spatial analytics.</p>
+											<p>Analysis of TOD in San Diego, CA</p>
 										</div>
 									</a>
 								</article>
-								<article class="style1">
+								<article class="style7">
+									<span class="image">
+										<img src="images/pic02.jpg" alt="" />
+									</span>
+									<a href="https://annannzhang.github.io/best-bars-story-map/">
+										<h2>Frank Lloyd Wright</h2>
+										<h3>Art History</h3>
+										<div class="content">
+											<p>Unfold World's Top Bars' Stories</p>
+										</div>
+									</a>
+								</article>
+								<article class="style7" >
+									<span class="image">
+										<img src="images/pic03.jpg" alt="" />
+									</span>
+									<a href="elements.html">
+										<h2>SISP Paper 1</h2>
+										<h3>Science in Society</h3>
+										<div class="content">
+											<p>Historic Preservation at Wukang Mansion, Shanghai</p>
+										</div>
+									</a>
+								</article>
+								<article class="style7">
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Psychology Paper 1</h2>
+										<h3>Psychology</h3>
+										<div class="content">
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style7">
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Psychology Paper 2</h2>
+										<div class="content">
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style7">
+									<span class="image">
+										<img src="images/pic06.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>History Paper 1</h2>
+										<h3>History</h3>
+										<div class="content">
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style7">
+									<span class="image">
+										<img src="images/pic07.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Class Projects</h2>
+										<h3>Python</h3>
+										<div class="content">
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style7">
+									<span class="image">
+										<img src="images/pic08.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>XX</h2>
+										<h3>From Undergrad</h3>
+										<div class="content">
+											<p>Range of Topics</p>
+										</div>
+									</a>
+								</article>
+								<article class="style7">
 									<span class="image">
 										<img src="images/pic09.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Price Prediction</h2>
+										<h2>XX</h2>
 										<h3>ML/Regression</h3>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="elements.html">
-										<h2>Honors Thesis</h2>
-										<h3>Academic Writing</h3>
-										<div class="content">
-											<p>Historic Preservation at Wukang Mansion, Shanghai</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Studio I</h2>
-										<h3>Upper Darby, PA, U.S.A.</h3>
-										<div class="content">
-											<p>Studio work as a part of 1st year City Planning program.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Studio II</h2>
-										<h3>Bogota, Colombia</h3>
-										<div class="content">
-											<p>This studio sheds light on intertwining relationship between public transit and affordable housing in Bogota.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>30 Day Map Challenge</h2>
-										<h3>Nov 2023</h3>
-										<div class="content">
-											<p>Tough Challenge!</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="https://annannzhang.github.io/San-Diego-TOD-Analysis/index.html">
-										<h2>San Diego TOD</h2>
-										<h3>R Studio</h3>
-										<div class="content">
-											<p>Analysis of TOD in San Diego, CA <br> (P.S. My Very First Spatial Data Project!)</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
-									</span>
-									<a href="undergrad_papers.html">
-										<h2>Research Papers</h2>
-										<h3>Undergrad | Academic Writing</h3>
-										<div class="content">
-											<p>Range of Topics</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="https://annannzhang.github.io/best-bars-story-map/">
-										<h2>Best Bars Story Map</h2>
-										<h3>HTML / JavaScript</h3>
-										<div class="content">
-											<p>Unfold World's Top Bars' Stories</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
+								<article class="style7">
 									<span class="image">
 										<img src="images/pic10.jpg" alt="" />
 									</span>
-									<a href="https://annannzhang.github.io/dashboard-project/">
-										<h2>Union Sq. Business Dashboard</h2>
-										<h3>HTML / JavaScript</h3>
+									<a href="generic.html">
+										<h2>XX</h2>
 										<div class="content">
-											<p>Work in Progress</p>
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
