--- a/python_projects.html
+++ b/python_projects.html
@@ -47,10 +47,10 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="https://annannzhang.github.io/San-Diego-TOD-Analysis/index.html">
-										<h2>ARHA Paper 1</h2>
-										<h3>Art History</h3>
+										<h2>Project 1</h2>
+										<h3>Donut Effect in Philly</h3>
 										<div class="content">
-											<p>Analysis of TOD in San Diego, CA</p>
+											<p>Where has people been moving: <br> City center or Suburb?</p>
 										</div>
 									</a>
 								</article>
@@ -58,11 +58,11 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="https://annannzhang.github.io/best-bars-story-map/">
-										<h2>Frank Lloyd Wright</h2>
-										<h3>Art History</h3>
+									<a href="https://annannzhang.github.io/Python-Projects/analysis/Ass-2.html">
+										<h2>Project 2</h2>
+										<h3>NYC Leisure & Cultural Spaces</h3>
 										<div class="content">
-											<p>Unfold World's Top Bars' Stories</p>
+											<p>Where to Spend Leisure Time in NYC?</p>
 										</div>
 									</a>
 								</article>
@@ -71,7 +71,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="elements.html">
-										<h2>SISP Paper 1</h2>
+										<h2>Project 3</h2>
 										<h3>Science in Society</h3>
 										<div class="content">
 											<p>Historic Preservation at Wukang Mansion, Shanghai</p>
@@ -83,7 +83,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Psychology Paper 1</h2>
+										<h2>Project 4</h2>
 										<h3>Psychology</h3>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -95,7 +95,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Psychology Paper 2</h2>
+										<h2>Project 5</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -106,7 +106,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>History Paper 1</h2>
+										<h2>Project 6</h2>
 										<h3>History</h3>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -118,48 +118,14 @@
 										<img src="images/pic07.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Class Projects</h2>
+										<h2>Final Project</h2>
 										<h3>Python</h3>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style8">
-									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>XX</h2>
-										<h3>From Undergrad</h3>
-										<div class="content">
-											<p>Range of Topics</p>
-										</div>
-									</a>
-								</article>
-								<article class="style8">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>XX</h2>
-										<h3>ML/Regression</h3>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style8">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>XX</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
+								
 
 							</section>
 						</div>
