changes in aesthetics

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 					<div id="main">
 						<div class="inner">
 							<section class="tiles">
-								<article class="style2">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/Python-snapshot.png" alt="" />
 									</span>
 									<a href="python_projects.html">
-										<h2>Python Projects</h2>
+										<h2>Python <br> In-Class <br> Projects</h2>
 										<h3>Python</h3>
 										<div class="content">
 											<p>Class Assignments on a range of themes on urban spatial analytics.</p>
@@ -56,21 +56,21 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
+										<img src="images/amsterdam-snapshot.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="https://annannzhang.github.io/Amsterdam_Airbnb_PricePredict/">
 										<h2>Price Prediction</h2>
 										<h3>ML/Regression</h3>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Using ML and Regression Model to Predict Airbnb Price in Amsterdam</p>
 										</div>
 									</a>
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/WK-mansion.jpg" alt="" />
 									</span>
-									<a href="elements.html">
+									<a href="https://drive.google.com/file/d/1H1KR5ijo0H0ygcYhz9xbTLuBcNE647V-/view?usp=sharing">
 										<h2>Honors Thesis</h2>
 										<h3>Academic Writing</h3>
 										<div class="content">
@@ -106,7 +106,7 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="elements.html">
 										<h2>30 Day Map Challenge</h2>
 										<h3>Nov 2023</h3>
 										<div class="content">
@@ -119,9 +119,9 @@
 									<span class="image">
 										<img src="images/pic08.jpg" alt="" />
 									</span>
-									<a href="undergrad_papers.html">
-										<h2>Research Papers</h2>
-										<h3>Undergrad | Academic Writing</h3>
+									<a href="papers.html">
+										<h2>In-Class <br> Research Papers</h2>
+										<h3>Academic Writing</h3>
 										<div class="content">
 											<p>Range of Topics</p>
 										</div>
@@ -151,6 +151,18 @@
 										</div>
 									</a>
 								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic10.jpg" alt="" />
+									</span>
+									<a href="https://annannzhang.github.io/dashboard-project/">
+										<h2>Python Final Project</h2>
+										<h3>Python</h3>
+										<div class="content">
+											<p>Work in Progress</p>
+										</div>
+									</a>
+								</article>
 
 							</section>
 						</div>
@@ -161,14 +173,11 @@
 						<div class="inner">
 							<section>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="https://www.linkedin.com/in/ann-zi-an-zhang-656b4419b/"  class="icon brands style2 fa-linkedin"><span class="label">Ann (Zi'an) Zhang</span></a></li>
+									<li><a href="https://www.instagram.com/annzhangzian/?hl=ja" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/annannzhang" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="annzhang@upenn.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="index.html"  class="icon solid style2 fa-home"><span class="label">https://annannzhang.github.io/</span></a></li>
 								</ul>
 							</section>
 						</div>
