--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 									<span class="image">
 										<img src="images/Python-snapshot.png" alt="" />
 									</span>
-									<a href="https://annannzhang.github.io/Python-Projects/">
+									<a href="python_projects.html">
 										<h2>Python <br> In-Class <br> Projects</h2>
 										<h3>Python</h3>
 										<div class="content">
