Minor style twists

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/Upper_Darby_Logo.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="https://drive.google.com/file/d/1Hx_I2HjqRDk1DDXplbF-j_DUqV4_yg6a/view?usp=sharing">
 										<h2>Studio I</h2>
 										<h3>Upper Darby, PA, U.S.A.</h3>
 										<div class="content">
@@ -90,7 +90,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style5">
+								<!--article class="style5">
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
@@ -101,8 +101,8 @@
 											<p>This studio sheds light on intertwining relationship between public transit and affordable housing in Bogota.</p>
 										</div>
 									</a>
-								</article>
-								<article class="style6">
+								</article-->
+								<!-- article class="style6">
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
@@ -113,7 +113,7 @@
 											<p>Tough Challenge!</p>
 										</div>
 									</a>
-								</article>
+								</article-->
 								
 								<article class="style3">
 									<span class="image">
