--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 									<span class="image">
 										<img src="images/pic10.jpg" alt="" />
 									</span>
-									<a>
+									<a href="placeholder_AAA.html">
 										<h2>All About Art (AAA)</h2>
 										<h3>Python</h3>
 										<div class="content">
