make a temporary art page

--- a/art.html
+++ b/art.html
@@ -38,7 +38,14 @@
 
 					</header>
 
-				<!-- Main -->
+					<main>
+						<div class="inner">
+							<br>
+						<h1>More To Come!</h1>
+						<br>
+					</div>
+					</main>
+				<!-- Main
 					<div id="main">
 						<div class="inner">
 							<section class="tiles">
@@ -155,7 +162,7 @@
 
 							</section>
 						</div>
-					</div>
+					</div> -->
 
 				<!-- Footer -->
 					<footer id="footer">
