Upload new pdf portfolio

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
+							<h1>Portfolio in PDF </h1>
+							<h2><a href="Portfolio 2024.pdf">Click here to open portfolio in a new window.</a></h2>
+							<object type="application/pdf" data="Portfolio 2024.pdf" width="600" height="400"></object>
+							<h1>Projects</h1>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
