--- a/placeholder_TT.html
+++ b/placeholder_TT.html
@@ -89,23 +89,19 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-						</div>
-					</footer>
+				<footer id="footer">
+					<div class="inner">
+						<section>
+							<ul class="icons">
+								<li><a href="https://www.linkedin.com/in/ann-zi-an-zhang-656b4419b/"  class="icon brands style2 fa-linkedin"><span class="label">Ann (Zi'an) Zhang</span></a></li>
+								<li><a href="https://www.instagram.com/annzhangzian/?hl=ja" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/annannzhang" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="annzhang@upenn.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="index.html"  class="icon solid style2 fa-home"><span class="label">https://annannzhang.github.io/</span></a></li>
+							</ul>
+						</section>
+					</div>
+				</footer>
 
 			</div>
 
