--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
 								</article>
 								<article class="style1">
 									<span class="image">
+										<img src="images/pic10.jpg" alt="" />
+									</span>
+									<a href="750 HW1.html">
+										<h2>Aviation HW1</h2>
+										<h3>R-Studio</h3>
+										<div class="content">
+											<p> Data Analytics of Airport Performance & Finance.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
 										<img src="images/Python-snapshot.png" alt="" />
 									</span>
 									<a href="https://annannzhang.github.io/Python-Projects/">
